--- a/SinglePageServer/appsettings.json
+++ b/SinglePageServer/appsettings.json
@@ -6,5 +6,11 @@
         "Protocols": "Http2"
       }
     }
+  },
+  "Server": {
+    "MimeTypes": {
+      ".m3u8": "application/x-mpegURL"
+    },
+    "FallbackFile": "index.html"
   }
 }
